--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,36 +2,111 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app: web
-  name: mynginx
+  name: beka
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      app: web
+      app: beka
   template:
     metadata:
       labels:
-        app: web
+        app: beka
     spec:
       containers:
-      - image: nginx
-        name: mynginx
+      - name: beka
+        image: nginx:latest
+        imagePullPolicy: Always
+        lifecycle:
+          postStart:
+            exec:
+              command: ["/bin/bash", "-c", "echo 'BEKA' > /usr/share/nginx/html/index.html"]
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nur
+spec:
+  selector:
+    matchLabels:
+      app: nur
+  template:
+    metadata:
+      labels:
+        app: nur
+    spec:
+      containers:
+      - name: nur
+        image: nginx:latest
+        imagePullPolicy: Always
+        lifecycle:
+          postStart:
+            exec:
+              command: ["/bin/bash", "-c", "echo 'NURMUKHAMMED' > /usr/share/nginx/html/index.html"]
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
+  name: beka-service
   labels:
-    app: web
-  name: mynginx
+    app: beka
 spec:
+  type: ClusterIP
   ports:
-  - nodePort: 32223
-    port: 80
-    protocol: TCP
+  - port: 80
     targetPort: 80
+    name: http
   selector:
-    app: web
-  type: NodePort
+    app: beka
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nur-service
+  labels:
+    app: nur
+spec:
+  type: ClusterIP
+  ports:
+  - port: 80
+    targetPort: 80
+    name: http
+  selector:
+    app: nur
+
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: nur-ingress
+  annotations:
+    kubernetes.io/ingress.class: nginx
+spec:
+  rules:
+  - host: nur.antengineering.net # write here hostname
+    http:
+      paths:
+      - backend:
+          serviceName: nur-service
+          servicePort: 80
+        path: /
+        
+
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: beka-ingress
+  annotations:
+    kubernetes.io/ingress.class: nginx
+spec:
+  rules:
+  - host: beka.antengineering.net # write here hostname
+    http:
+      paths:
+      - backend:
+          serviceName: nur-service
+          servicePort: 80
+        path: /
