--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     docker:
       - image: google/cloud-sdk
     environment:
-      - PROJECT_NAME: "my-project"
+      - PROJECT_NAME: "kubernetes"
       - GOOGLE_PROJECT_ID: "playground-s-11-5f07ae87"
       - GOOGLE_COMPUTE_ZONE: "us-central1-c"
       - GOOGLE_CLUSTER_NAME: "cluster-2"
@@ -21,22 +21,13 @@ jobs:
             gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
             gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
             gcloud --quiet container clusters get-credentials ${GOOGLE_CLUSTER_NAME}
-      - setup_remote_docker
-      - run: 
-          name: Deploy to K
-          command: |
-            apt-get install -qq -y gettext
-            echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
-            gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
-            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
-            gcloud --quiet container clusters get-credentials ${GOOGLE_CLUSTER_NAME}
+     
       - run: 
           name: Deploy to Kubernetes
           command: |
             envsubst < ${HOME}/project/deployment.yaml > ${HOME}/patched_k8s.yml
             kubectl apply -f ${HOME}/patched_k8s.yml
-            kubectl rollout status deployment/${PROJECT_NAME}      
+               
        
 workflows:
   version: 2
